--- a/docs/milestone1.ipynb
+++ b/docs/milestone1.ipynb
@@ -16,6 +16,55 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Mathematical Background**\n",
+    "\n",
+    "Automatic Differentiation decomposes a complex function into a sequence of operations on elementary functions, evaluates the derivatives at each intermediate stage, repeatedly applies the chain rule to obtain the derivative of the outermost function.\n",
+    "We provides explanations for related math concepts below. \n",
+    "\n",
+    "**Elimentary functions**\n",
+    "\n",
+    "The class of functions consisting of the polynomials, the exponential functions, the logarithmic functions, the trigonometric functions, the inverse trigonometric functions,and the functions obtained from those listed by the four arithmetic operations and by superposition(i.e. composition),applied by finitely many times.\n",
+    "\n",
+    "**Chain Rule**\n",
+    "+ Used to compute the derivative of a composite function\n",
+    "+ Core of automatic differentiation\n",
+    "$$ f \\circ g (x) = f(g(x))$$\n",
+    "$$\\frac{d}{dx}[f(g(x))] = f'(g(x))g'(x)$$\n",
+    "\n",
+    "**Dual Numbers**\n",
+    "+ Used to compute derivative for elementary functions in automatic differentiation\n",
+    "+ Replace x and y with $x+x'\\epsilon$ and $y+y'\\epsilon$. x' and y' are real numbers,$\\epsilon$ is an abstract number with the property: $\\epsilon^2=0$\n",
+    "+ Carry out operations, the dual part gives us the derivative\n",
+    "\n",
+    "**Topological Graph**\n",
+    "+ Each node represent a variable\n",
+    "+ Arrows indicate topological orders(order of operations) and operations themselves.\n",
+    "\n",
+    "\n",
+    "**Forward Mode Autodifferentiation**\n",
+    "\n",
+    "Follow the topological order and store the values of each variable in the nodes.\n",
+    "visit each node in topological order. Let x denote our innermost function. For variable $u_i=g_i(v)$ we already know $\\frac{dv}{dx}$, calculate $\\frac{du_i}{dx}= \\frac{du_i}{dv}\\frac{dv}{dx}$\n",
+    "\n",
+    "\n",
+    "**Reverse Mode Autodifferentiation**\n",
+    "\n",
+    "Has forward computation and backward computation\n",
+    "\n",
+    "    **Forward Computation**\n",
+    "Follow the topological order and store the values of each variable in each nodes.\n",
+    "    \n",
+    "    \n",
+    "    **Backward Computation**\n",
+    "let y denote our final output variable and $u_j$, $v_j$ denote the intermediate variables\n",
+    "1. Initialize all partial derivative $\\frac{dy}{du_j}$ to 0 and dy/dy = 1\n",
+    "2. visit each node in reverse topological order. For variable $u_i=g_i(v_1,...,v_n)$ we already know $\\frac{dy}{du_i}$, increment $\\frac{dy}{dv_j}$ by $\\frac{dy}{du_i}\\frac{du_i}{dv_j}$\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
@@ -583,7 +632,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
