Fixed some minor problem in code_explore

--- a/code_explore/central_data_structure.ipynb
+++ b/code_explore/central_data_structure.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,36 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class Variable:\n",
-    "    def __init__(self):\n",
-    "        return\n",
-    "    \n",
-    "    def evaluation_at(self, val_dict):\n",
-    "        return val_dict[self]\n",
-    "    \n",
-    "    def derivative_at(self, var, val_dict):\n",
-    "        return 1.0 if var is self else 0.0\n",
-    "    \n",
-    "    def __add__(self, another):\n",
-    "        return Expression(Add, self, another)\n",
-    "    \n",
-    "    def __radd__(self, another):\n",
-    "        return Expression(Add, another, self)\n",
-    "    \n",
-    "    def __sub__(self, another):\n",
-    "        return Expression(Sub, self, another)\n",
-    "    \n",
-    "    def __rsub__(self, another):\n",
-    "        return Expression(Sub, another, self)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +60,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Variable(Expression):\n",
+    "    def __init__(self):\n",
+    "        return\n",
+    "    \n",
+    "    def evaluation_at(self, val_dict):\n",
+    "        return val_dict[self]\n",
+    "    \n",
+    "    def derivative_at(self, var, val_dict):\n",
+    "        return 1.0 if var is self else 0.0\n",
+    "    \n",
+    "#     def __add__(self, another):\n",
+    "#         return Expression(Add, self, another)\n",
+    "    \n",
+    "#     def __radd__(self, another):\n",
+    "#         return Expression(Add, another, self)\n",
+    "    \n",
+    "#     def __sub__(self, another):\n",
+    "#         return Expression(Sub, self, another)\n",
+    "    \n",
+    "#     def __rsub__(self, another):\n",
+    "#         return Expression(Sub, another, self)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -179,13 +179,13 @@
        "7.38905609893065"
       ]
      },
-     "execution_count": 139,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "f.evaluation_at({a: 1.0, b: 2.0, c:3.0})"
+    "f.evaluation_at({a: 1.0, b: 2.0, c: 3.0})"
    ]
   },
   {
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 24,
    "metadata": {
     "scrolled": true
    },
@@ -208,41 +208,48 @@
        "-7.38905609893065"
       ]
      },
-     "execution_count": 141,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "f.derivative_at(b, {a: 1.0, b: 2.0, c:3.0})"
+    "f.derivative_at(b, {a: 1.0, b: 2.0, c: 3.0})"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$\\dfrac{\\partial f}{\\partial a} = e^{a-b}$, at $(a, b) = (1.0, 23.0)$, that should be $e^{2} \\approx 7.389$."
+    "$\\dfrac{\\partial f}{\\partial a} = e^{a-b+c}$, at $(a, b) = (1.0, 23.0)$, that should be $e^{2} \\approx 7.389$."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.1353352832366127"
+       "2.718281828459045"
       ]
      },
-     "execution_count": 129,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "f.derivative_at(a, {a: 1.0, b: 3.0})"
+    "f.derivative_at(a, {a: 1.0, b: 3.0, c: 3.0})"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
