Added the Constant class, reorganized the class hierachy.

--- a/code_explore/central_data_structure.ipynb
+++ b/code_explore/central_data_structure.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,21 +46,35 @@
     "                self._sub_expr1, self._sub_expr2, var, val_dict)\n",
     "    \n",
     "    def __add__(self, another):\n",
-    "        return Expression(Add, self, another)\n",
+    "        if isinstance(another, Expression):\n",
+    "            return Expression(Add, self, another)\n",
+    "        # if the other operand is not an Expression, then it must be a number\n",
+    "        # the number then should be converted to a Constant\n",
+    "        else:\n",
+    "            return Expression(Add, self, Constant(another))\n",
     "    \n",
     "    def __radd__(self, another):\n",
-    "        return Expression(Add, another, self)\n",
+    "        if isinstance(another, Expression):\n",
+    "            return Expression(Add, another, self)\n",
+    "        else:\n",
+    "            return Expression(Add, Constant(another), self)\n",
     "    \n",
     "    def __sub__(self, another):\n",
-    "        return Expression(Sub, self, another)\n",
+    "        if isinstance(another, Expression):\n",
+    "            return Expression(Sub, self, another)\n",
+    "        else:\n",
+    "            return Expression(Sub, self, Constant(another))\n",
     "    \n",
     "    def __rsub__(self, another):\n",
-    "        return Expression(Sub, another, self)"
+    "        if isinstance(another, Expression):\n",
+    "            return Expression(Sub, another, self)\n",
+    "        else:\n",
+    "            return Expression(Sub, Constant(another), self)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,24 +86,29 @@
     "        return val_dict[self]\n",
     "    \n",
     "    def derivative_at(self, var, val_dict):\n",
-    "        return 1.0 if var is self else 0.0\n",
-    "    \n",
-    "#     def __add__(self, another):\n",
-    "#         return Expression(Add, self, another)\n",
-    "    \n",
-    "#     def __radd__(self, another):\n",
-    "#         return Expression(Add, another, self)\n",
-    "    \n",
-    "#     def __sub__(self, another):\n",
-    "#         return Expression(Sub, self, another)\n",
-    "    \n",
-    "#     def __rsub__(self, another):\n",
-    "#         return Expression(Sub, another, self)"
+    "        return 1.0 if var is self else 0.0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Constant(Expression):\n",
+    "    def __init__(self, val):\n",
+    "        self.val = val\n",
+    "        \n",
+    "    def evaluation_at(self, val_dict):\n",
+    "        return self.val\n",
+    "    \n",
+    "    def derivative_at(self, var, val_dict):\n",
+    "        return 0.0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,14 +158,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Functions:\n",
-    "    @staticmethod\n",
-    "    def exp(expr):\n",
-    "        return Expression(Exp, expr)"
+    "def exp(expr):\n",
+    "    return Expression(Exp, expr)"
    ]
   },
   {
@@ -158,19 +175,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
     "a = Variable()\n",
     "b = Variable()\n",
     "c = Variable()\n",
-    "f = Functions.exp(a-b+c)"
+    "f = exp(a-b+c)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +196,7 @@
        "7.38905609893065"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -197,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 75,
    "metadata": {
     "scrolled": true
    },
@@ -208,7 +225,7 @@
        "-7.38905609893065"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -221,12 +238,104 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$\\dfrac{\\partial f}{\\partial a} = e^{a-b+c}$, at $(a, b) = (1.0, 23.0)$, that should be $e^{2} \\approx 7.389$."
+    "$\\dfrac{\\partial f}{\\partial a} = e^{a-b+c}$, at $(a, b) = (1.0, 2.0, 3.0)$, that should be $e^{2} \\approx 7.389$."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7.38905609893065"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f.derivative_at(a, {a: 1.0, b: 2.0, c: 3.0})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let $g(x, y) = x + e^{y-1}$, at $(x, y) = (1.0, 2.0)$, that should be $1+e \\approx 3.718$."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = Variable()\n",
+    "y = Variable()\n",
+    "g = x + exp(y-1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3.718281828459045"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "g.evaluation_at({x: 1.0, y: 2.0})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$\\dfrac{\\partial g}{\\partial x} = 1$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.0"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "g.derivative_at(x, {x: 1.0, y: 2.0})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$\\dfrac{\\partial g}{\\partial y} = e^{y-1}$, at $(x, y) = (1.0, 2.0)$, that should be $e^{1} \\approx 2.718$."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -235,21 +344,14 @@
        "2.718281828459045"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "f.derivative_at(a, {a: 1.0, b: 3.0, c: 3.0})"
+    "g.derivative_at(y, {x: 1.0, y: 2.0})"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
