multiple and division in progress

--- a/code_explore/central_data_structure.ipynb
+++ b/code_explore/central_data_structure.ipynb
@@ -75,9 +75,15 @@
     "        else:\n",
     "            return Expression(Sub, Constant(another), self)\n",
     "        \n",
-    "    ### Working on Multiple and division\n",
-    "    def __mul__(self, another): \n",
-    "        pass"
+    "\n",
+    "#     def __mul__(self, other):\n",
+    "#         try:\n",
+    "#             return Expression(self.val * other.val, self.val * other.der + self.der * other.val)\n",
+    "#         except AttributeError:\n",
+    "#             return Expression(self.val * other, self.der * other)\n",
+    "\n",
+    "#     def __rmul__(self, other):\n",
+    "#         return Expression(other * self.val, other * self.der)"
    ]
   },
   {
